# goal-drift

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_langchain_agent.py
src/goal_drift/: __init__.py  core.py  embedder.py  harm.py  langchain.py  semantic.py
tests/: eval_dataset.py  test_core.py  test_harm.py  test_semantic.py
tests/attacks/: dataset.yaml
