[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goal-drift"
version = "0.1.0"
description = "Prompt injection detection for AI agents via semantic goal drift monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["prompt-injection", "ai-security", "llm", "agents", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
voyage   = ["voyageai>=0.3.0"]
dev      = ["pytest>=8.0", "pytest-asyncio", "build>=1.2.0", "twine>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/goal_drift"]
